fix footer on mobile

--- a/CSS/media.css
+++ b/CSS/media.css
@@ -111,9 +111,4 @@
   .contact {
     flex-direction: column;
   }
-
-  /* Footer */
-  .footer {
-    position: relative;
-  }
 }
